[U]使用绝对路径地址 完善图书模块

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,6 +4,9 @@
 #books {
   padding: 0 !important;
 }
+#books .link {
+  display: flex;
+}
 #books > div:nth-of-type(2n) {
   margin-left: 100px;
 }
